fix overflow

--- a/src/partials/main/Main.css
+++ b/src/partials/main/Main.css
@@ -8,7 +8,7 @@
   animation-name: sunrise;
   z-index: -1;
   transition: 3s;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .main__content {
